2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.test: Hooked into the new common test support code.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* aes.bench: Extended with benchmarks for the keyschedule.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* aes.tcl:      Frink warning suppression
	* aes.man:      Added a description of cipher modes of operation.

2005-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* aes.tcl:      Re-written to support CBC mode AES and to allow for
	* aes.test:     the tcllib-style programming API (as per blowfish, RC4 and
	* aes.man:      the hash implementations). Converted from an array based
	* pkgIndex.tcl: implementation to a list based implementation and
	                gained a 4x speedup. Set to 1.0.0 for now the API is fixed.
	
2005-08-30  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: **New file**. Added the missing package index
	  without which the package cannot be used.

2005-08-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* aes.tcl:   Added a number of performance improvements
	* aes.test:

2005-08-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* aes.tcl:   Initial import of a Tcl implementation of